--- a/mywebpage1/index.html
+++ b/mywebpage1/index.html
@@ -119,7 +119,7 @@
 					<p class="right"><font size="3" style="font-family: Courier,monospace">Очень люблю искусство в целом. В особенности - литературу и театр. <b>Ф.М.Достоевский, М.Горький, Л.Н.Андреев, А.Камю, Донна Тартт</b> - одни из самых любимых писателей.</p>
 					<p class="right">Пытаюсь писать <b>прозу и лирику</b>.</p>
 					<p class="right">Интересы и убеждения меняются с неимоверной скоростью, так что каждый день просыпаюсь <b>новым человеком.</b></p> 
-					<p class="right">Играю на <b>гитаре</b></p>
+					<p class="right">Играю на <b>гитаре</b>.</p>
 					<p class="right">В зависимости от настроения предпочитаю слушать либо <b>black/death/nu метал</b>, либо <b>классику</b>, либо что-то в стиле <b>киберпанк</b>.</p>
 					<p class="right">Хотя <b>звук молчания</b> лучше всего</p>
 					
