--- a/mywebpage1/index.html
+++ b/mywebpage1/index.html
@@ -116,7 +116,7 @@
 					<br>
 					<h2 class="right">Немного обо мне</h2>
 					<br>
-					<p class="right"><font size="3" style="font-family: Courier,monospace">Очень люблю искусство в целом. В особенности - литературу и театр. <b>Ф.М.Достоевский, М.Горький, Л.Н.Андреев, А.Камю, Донна Тартт</b> - одни из самых любимых писателей.</p>
+					<p class="right"><font size="3" style="font-family: Courier,monospace">Очень люблю искусство в целом. В особенности - литературу и театр. <b>Ф.М.Достоевский, М.Горький, Л.Н.Андреев, О.Э.Мандельштам, А.Камю, Донна Тартт</b> - одни из самых любимых писателей.</p>
 					<p class="right">Пытаюсь писать <b>прозу и лирику</b>.</p>
 					<p class="right">Интересы и убеждения меняются с неимоверной скоростью, так что каждый день просыпаюсь <b>новым человеком.</b></p> 
 					<p class="right">Играю на <b>гитаре</b>.</p>
